Remove FrameSinkId hierarchy when unparenting ServerWindow.

We need to change the FrameSinkId heirarchy along with ServerWindow
hierarchy. We were missing a case when we unparent a ServerWindow.

This caused a crash in app list because we never unregister the
FrameSinkId heirarchy. There is a DCHECK that we don't register the same
hierarchy twice and when reopening the app list that DCHECK was hit.

BUG=690970

Review-Url: https://codereview.chromium.org/2692223003
Cr-Commit-Position: refs/heads/master@{#450427}

Former-commit-id: 509840116ed907fb1e466c7ca0a35eb76f0eb6d5